--- a/styles/influencer.css
+++ b/styles/influencer.css
@@ -10,6 +10,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* padding: 0 50px; */
 }
 .nav-title{
     color: #3A3A3A;
@@ -26,4 +27,18 @@ nav li{
 nav a{
     text-decoration: none;
     color: #3A3A3A;
+}
+/* header related styles */
+header{
+    background: #fff;
+
+}
+.banner{
+    padding: 30px 30px 0px 100px;
+    display: flex;
+    align-items: center;
+}
+.banner .camera-pic{
+    width: 440px;
+    height: 414px;
 }
